--- a/style.css
+++ b/style.css
@@ -45,5 +45,27 @@ body{
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    /* background: url(Wallpaper.jpg) no-repeat ; */\
+    /* background: url(Wallpaper.jpg) no-repeat ; */
+    display: flex;
+    align-items: center;
+    padding: 70px 10% 0;
+}
+body{
+    background-color: black;
+}
+.home-content{
+    max-width: 600px;
+}
+.home-content h3{
+    font-size: 32px;
+    font-weight: 700;
+}
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700;
+    margin: -3px 0;
+
+}
+.home-content p{
+    font-size: 20px;
 }
